# zip_flutter

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: test.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/zip_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: zip_flutter.podspec
ios/Classes/: zip_flutter.c
lib/: zip_flutter.dart
lib/src/: generated_bindings.dart  isolates.dart  multithreading.dart  zip_dart_base.dart
linux/: CMakeLists.txt
macos/: zip_flutter.podspec
macos/Classes/: zip_flutter.cpp
src/: CMakeLists.txt  miniz.h  zip.c  zip.cc  zip.h
src/test/: CMakeLists.txt  test.cpp
windows/: CMakeLists.txt
